--- a/docker/config/apache/001-pvw.conf
+++ b/docker/config/apache/001-pvw.conf
@@ -17,7 +17,7 @@
   # Handle launcher forwarding
   ProxyPass /paraview http://localhost:9000/paraview
   # Handle websocket forwarding
-  # ProxyPass /proxy ws://localhost:9000/proxy
+  ProxyPass /proxy ws://localhost:9000/proxy
   # ProxyPass /enlil http://localhost:9000/enlil
 
   # # Main server
