ENH: Adding the option to specify the input file

--- a/pvw/launcher/config.json
+++ b/pvw/launcher/config.json
@@ -38,6 +38,7 @@
         "/pvw/server/pv_server_statefile.py",
         "--port", "${port}",
         "--authKey", "${secret}",
+        "--file", "/data/test.nc",
         "--viewport-max-width", "1920",
         "--viewport-max-height", "1080",
         "--timeout", "30"
