--- a/docker/config/apache/001-pvw.conf
+++ b/docker/config/apache/001-pvw.conf
@@ -15,9 +15,9 @@
   # APPLICATION-ENDPOINTS
 
   # Handle launcher forwarding
-  ProxyPass /paraview http://localhost:9000/paraview
+  ProxyPass /paraview https://localhost:9000/paraview
   # Handle websocket forwarding
-  ProxyPass /proxy ws://localhost:9000/proxy
+  ProxyPass /proxy wss://localhost:9000/proxy
   # ProxyPass /enlil http://localhost:9000/enlil
 
   # # Main server
@@ -28,5 +28,5 @@
   RewriteEngine On
   RewriteMap session-to-port txt:/opt/launcher/proxy-mapping.txt
   RewriteCond %{QUERY_STRING} ^sessionId=(.*)&path=(.*)$ [NC]
-  RewriteRule ^/proxy.*$  ws://${session-to-port:%1}/%2  [P]
+  RewriteRule ^/proxy.*$  wss://${session-to-port:%1}/%2  [P]
 </VirtualHost>
