--- a/pvw/launcher/config.json
+++ b/pvw/launcher/config.json
@@ -7,7 +7,7 @@
     "log_dir": "/pvw/launcher/log",
     "host": "localhost",
     "endpoint": "paraview",
-    "sessionURL": "SESSION_URL_ROOT/proxy?sessionId=${id}&path=ws",
+    "sessionURL": "SESSION_URL_ROOT/proxy?sessionId=${id}&path=wss",
     "timeout": 25,
     "fields": [],
     "port": 9000,
