MNT: Ignoring the server assets for images
Adds a new gitignore entry.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ data/
 pvw/www/swt
 pvw/launcher/log/*.txt
 pvw/launcher/log/*.log
+pvw/server/assets
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
