--- a/pvw/launcher/config.json
+++ b/pvw/launcher/config.json
@@ -28,12 +28,11 @@
   "properties": {
     "dataDir": "/data",
     "webapps_dir": "/opt/paraview/share/paraview-5.9/web",
-    "python_exec": "/opt/paraview/bin/pvbatch"
+    "python_exec": "/opt/paraview/bin/pvpython"
   },
   "apps": {
     "visualizer": {
-      "cmd": ["/opt/paraview/bin/mpiexec", "-n", "4",
-        "${python_exec}",
+      "cmd": ["${python_exec}",
         EXTRA_PVPYTHON_ARGS
         "/pvw/server/pv_server_statefile.py",
         "--port", "${port}",
