MNT: Change from data file to data directory
This update changes from specifying a data file to load to a data directory
that contains the given file. This allows a user to swap directories to point
at different files. Each directory will need to contain the pv-data-3d.nc file
for loading the data.

--- a/pvw/launcher/config.json
+++ b/pvw/launcher/config.json
@@ -37,7 +37,7 @@
         "/pvw/server/pv_server_statefile.py",
         "--port", "${port}",
         "--authKey", "${secret}",
-        "--file", "/data/pv-data-3d.nc",
+        "--dir", "/data",
         "--viewport-max-width", "1920",
         "--viewport-max-height", "1080",
         "--timeout", "30"
