--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,11 +1,18 @@
-version: '2'
+version: '2.1'
 
 services:
   pvw:
     image: 135080795405.dkr.ecr.us-east-1.amazonaws.com/enlil:pvw-enlil-osmesa
     ports:
-      - "0.0.0.0:8080:80"
+      - "8080:80"
+    volumes:
+      - type: bind
+        source: ${PVW_BACKEND:-/data/pv-server}
+        target: /pvw
+      - type: bind
+        source: ${PVW_DATA:-/data/pv-data}
+        target: /data
     restart: always
     environment:
-      - SERVER_NAME=127.0.0.1:8080
-      - PROTOCOL=wss
+      - SERVER_NAME=${SERVER_NAME:-127.0.0.1:8080}
+      - PROTOCOL=${PROTOCOL:-ws}
