--- a/pvw/docker/docker-compose.yaml
+++ b/pvw/docker/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   pvw:
-    image: public.ecr.aws/enlil/paraview_web_repo:pvw-enlil-osmesa
+    image: public.ecr.aws/enlil/paraview_web_repo:${PVW_IMAGE_TAG:-pvw-enlil-osmesa}
     ports:
       - "8080:80"
     volumes:
