MNT: Rename the app to a more generic name
This avoids Enlil in the app name and changes to h3lio viz instead.

XXX

--- a/pvw/launcher/config.json
+++ b/pvw/launcher/config.json
@@ -36,7 +36,7 @@
         "env", "PARAVIEW_LOG_RENDERING_VERBOSITY=INFO",
         "${python_exec}",
         EXTRA_PVPYTHON_ARGS
-        "/pvw/server/pv_server_statefile.py",
+        "/pvw/server/app_server.py",
         "--port", "${port}",
         "--authKey", "${secret}",
         "--dir", "/data",
