--- a/pvw/docker/docker-compose-gpu.yaml
+++ b/pvw/docker/docker-compose-gpu.yaml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   pvw:
-    image: public.ecr.aws/enlil/paraview_web_repo:${PVW_IMAGE_TAG:-pvw-enlil-egl}
+    image: public.ecr.aws/h3lioviz/paraview_web_repo:${PVW_IMAGE_TAG:-h3lioviz-egl}
     deploy:
       resources:
         reservations:
