--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -17,8 +17,8 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
+        aws-region: us-east-1
 
     - name: Deploy to s3
       run: |
-        aws s3 sync . s3://enlil.dev.swx-trec.com/backend/ --exclude="*.git/*" --delete
+        aws s3 sync . s3://swx-trec/h3lioviz/backend/ --exclude="*.git/*" --delete
