MNT: Update Docker builds to Paraview 5.10 and wslink 1+
This updates the Docker build and launch configurations

--- a/docker/config/apache/001-pvw.conf
+++ b/docker/config/apache/001-pvw.conf
@@ -15,14 +15,10 @@
   # APPLICATION-ENDPOINTS
 
   # Handle launcher forwarding
+  # TODO: May need to switch this to /launcher in future versions
   ProxyPass /paraview http://localhost:9000/paraview
   # Handle websocket forwarding
   ProxyPass /proxy ws://localhost:9000/proxy
-  # ProxyPass /enlil http://localhost:9000/enlil
-
-  # # Main server
-  # ProxyPass        / http://localhost:9000/
-  # ProxyPassReverse / http://localhost:9000/
 
   # Handle WebSocket forwarding
   RewriteEngine On
