--- a/pvw/docker/docker-compose.yaml
+++ b/pvw/docker/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3.2'
 
 services:
   pvw:
-    image: public.ecr.aws/enlil/paraview_web_repo:${PVW_IMAGE_TAG:-pvw-enlil-osmesa}
+    # image: public.ecr.aws/enlil/paraview_web_repo:${PVW_IMAGE_TAG:-pvw-h3lioviz-osmesa}
+    image: pvw-h3lioviz-osmesa
     ports:
       - "8080:80"
     volumes:
