--- a/pvw/launcher/config.json
+++ b/pvw/launcher/config.json
@@ -4,7 +4,7 @@
     "updir": "/Home"
   },
   "configuration": {
-    "log_dir": "/pvw/launcher/log",
+    "log_dir": "/data/launcher/log",
     "host": "0.0.0.0",
     "port": 9000,
     "endpoint": "paraview",
