--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=ubuntu:20.04
+ARG BASE_IMAGE=ubuntu:24.04
 
 # ARG BASE_IMAGE=nvidia/opengl:1.0-glvnd-devel-ubuntu20.04
 FROM ${BASE_IMAGE}
@@ -16,6 +16,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         libapr1-dev \
         libglapi-mesa \
         apache2-utils \
+        libx11-6 \
+        libgl1 \
+        libxcursor-dev \
+        python3-pip \
+        # libosmesa6-dev?
+        # TODO: Look into wslink missing module?
+        # /opt/paraview/bin/pvpython-real: Error while finding module specification for 'wslink.launcher' (ModuleNotFoundError: No module named 'wslink')
         sudo && \
     rm -rf /var/lib/apt/lists/*
 
@@ -23,7 +30,7 @@ RUN groupadd proxy-mapping && \
     groupadd pvw-user && \
     useradd --system -g pvw-user -G proxy-mapping -s /sbin/nologin pvw-user && \
     usermod -a -G proxy-mapping www-data && \
-    useradd admin && echo "admin:admin" | chpasswd && adduser admin sudo && \
+    useradd admin && echo "admin:admin" | chpasswd && sudo usermod -aG sudo admin && \
     mkdir -p /opt/launcher/log && \
     chown -R pvw-user:pvw-user /opt/launcher && \
     mkdir -p /opt/paraviewweb/scripts && \
@@ -62,11 +69,17 @@ EXPOSE 80
 #     tar -xzvf ParaView-5.9.1-egl-MPI-Linux-Python3.8-64bit.tar.gz && \
 #     mv ParaView-5.9.1-egl-MPI-Linux-Python3.8-64bit paraview
 
-COPY docker/binaries/ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64.tar.gz /opt
+# COPY docker/binaries/ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64.tar.gz /opt
+# RUN cd /opt && \
+#     tar -xzvf ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64.tar.gz && \
+#     mv ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64 paraview && \
+#     rm ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64.tar.gz
+
+COPY docker/binaries/ParaView-6.0.0-RC2-MPI-Linux-Python3.12-x86_64.tar.gz /opt
 RUN cd /opt && \
-    tar -xzvf ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64.tar.gz && \
-    mv ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64 paraview && \
-    rm ParaView-5.10.1-${RENDERER}-MPI-Linux-Python3.9-x86_64.tar.gz
+    tar -xzvf ParaView-6.0.0-RC2-MPI-Linux-Python3.12-x86_64.tar.gz && \
+    mv ParaView-6.0.0-RC2-MPI-Linux-Python3.12-x86_64 paraview && \
+    rm ParaView-6.0.0-RC2-MPI-Linux-Python3.12-x86_64.tar.gz
 
 # Copy our server release into the container as well
 # This can be overridden for local testing with `-v ${PWD}/pvw:/pvw`
@@ -77,8 +90,15 @@ RUN mkdir /data
 COPY test-data/launcher /data/launcher
 COPY test-data/pv-ready-data-9a68f9e9/ /data/pv-ready-data-9a68f9e9/
 
+# Need to install this to get wslink installed and loadable as a module.
+# NOTE: It is not a part of pvpython, does that matter?
+RUN python3 -m pip install "vtk[web]" --break-system-packages
+
 # Start the container.  If we're not running this container, but rather are
 # building other containers based on it, this entry point can/should be
 # overridden in the child container.  In that case, use the "start.sh"
 # script instead, or you can provide a custom one.
 ENTRYPOINT ["/opt/paraviewweb/scripts/server.sh"]
+
+# TESTING:
+# install vtk[web] for wslink: pip install vtk[web] --break-system-packages
