--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,6 +1,6 @@
 # Unforutnately, all of these are required for the netcdf io here :(
-dask
 netcdf4
 numpy
 scipy
 xarray
+importlib-metadata==4.13.0
